--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 .ipynb_checkpoints/lesson-1-checkpoint.ipynb
 .ipynb_checkpoints/ls-1-checkpoint.ipynb
+.ipynb_checkpoints/lessson-2-checkpoint.ipynb
+.ipynb_checkpoints/lesson-3-checkpoint.ipynb
