--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-.ipynb_checkpoints/lesson-1-checkpoint.ipynb
-.ipynb_checkpoints/ls-1-checkpoint.ipynb
-.ipynb_checkpoints/lessson-2-checkpoint.ipynb
-.ipynb_checkpoints/lesson-3-checkpoint.ipynb
+.ipynb_checkpoints
+alice_in_wonderland.txt
+.gitattributes
+.gitattributes
